test/org/midica/testfiles/failing/sk-duplicate-author.midica
INCLUDE inc/instruments.midica

META
	composer	Beethoven
	copyright   2nd line
	SOFT_KARAOKE
		language   ENGL
		author     the karaoke author
		author     another author
	END
END
